# Proyecto

install/: setup.sh
install/kalanchoe_interface/share/kalanchoe_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nodo_data_analysis/lib/nodo_data_analysis/: start_data_analysis
install/nodo_data_analysis/share/nodo_data_analysis/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nodo_data_monitoring/lib/nodo_data_monitoring/: start_monitoring
install/nodo_data_monitoring/share/nodo_data_monitoring/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nodo_kalanchoe/lib/nodo_kalanchoe/: start_kalanchoe
install/nodo_kalanchoe/share/nodo_kalanchoe/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nodo_lighting_station/lib/nodo_lighting_station/: start_light_station
install/nodo_lighting_station/share/nodo_lighting_station/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nodo_watering_station/lib/nodo_watering_station/: start_watering_station
install/nodo_watering_station/share/nodo_watering_station/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xolobot_tengo_sed/share/xolobot_tengo_sed/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xolobot_tengo_sed/share/xolobot_tengo_sed/environment/: xolobot_tengo_sed.dsv
install/xolobot_tengo_sed/share/xolobot_tengo_sed/worlds/: xolobot_world_simple.sdf
log/: latest_build
(+103 files in other folders)
