<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xolobot_tengo_sed</name>
  <version>0.0.0</version>
  <description>El robot Xolobot para el mundo con sed</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Antonio López Jaimes</author>

  <depend>xolobot_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

